# ferroflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: dag.rs  dag_gen.rs  device.rs  lib.rs  metrics.rs  op.rs  ops.rs  tensor.rs
crates/onnx/: Cargo.toml
crates/onnx/src/: lib.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/benches/: dag_bench.rs
crates/runtime/src/: executor.rs  lib.rs  mpi_worker.rs  static_scheduler.rs  work_stealing.rs  worker.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs  state.rs  ui.rs
docs/: architecture.md  benchmark_results.json  benchmarks.md  benchmarks_results_mpi.json  gpu_results.txt  narval-setup.md  nibi_scaling_results.json  progress.md
docs/data/: benchmark_results.json  nibi_gpu_results.txt  scaling_results.json
ferroflow/: __init__.py
ferroflow/examples/: simple_mlp.py
models/: mlp.onnx  mlp.onnx.data  resnet18.onnx
mpi-hello/: Cargo.toml  job.sh
mpi-hello/src/: main.rs
scripts/: export_mlp.py  export_resnet.py  plot_scaling.py
slurm/: benchmark.sh  ferroflow.sh  gpu_bench.sh  nibi_gpu_bench.sh  resnet_bench.sh  scaling.sh
src/: main.rs
