[package]
name    = "ferroflow-core"
version = "0.1.0"
edition = "2021"

[features]
distributed = []

[dependencies]
ndarray   = { workspace = true }
rayon     = { workspace = true }
serde     = { workspace = true }
bincode   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
