[package]
name    = "ferroflow-core"
version = "0.1.0"
edition = "2021"

[features]
distributed = []
cuda = ["dep:cudarc"]

[dependencies]
ndarray   = { workspace = true }
rayon     = { workspace = true }
serde     = { workspace = true }
bincode   = { workspace = true }
thiserror = { workspace = true }
cudarc = { version = "0.12", features = ["cuda-12020", "cublas"], optional = true }

[dev-dependencies]
serde_json = "1"
