[package]
name    = "ferroflow-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferroflow-tui"
path = "src/main.rs"

[dependencies]
ferroflow-core    = { workspace = true }
ferroflow-runtime = { workspace = true }
ratatui           = { workspace = true }
crossterm         = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
clap              = { version = "4", features = ["derive"] }
